--- a/pom.xml
+++ b/pom.xml
@@ -1253,7 +1253,7 @@
         <taglibs.version>1.1.2</taglibs.version>
         <google.collect.wso2.version>1.0.0.wso2v2</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
-        <carbon.kernel.version>4.4.7</carbon.kernel.version>
+        <carbon.kernel.version>4.4.9</carbon.kernel.version>
         <carbon.commons.version>4.5.4</carbon.commons.version>
         <carbon.dashboards.version>1.0.18</carbon.dashboards.version>
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
@@ -1342,6 +1342,17 @@
 	by default) and nothing else. We had troubles with other repositories in
 	the past. Therefore configuring additional repositories here should be
 	considered very carefully. -->
+        <repository>
+            <id>wso2.releases.kernel</id>
+            <name>WSO2 internal Repository</name>
+            <url>https://maven.wso2.org/nexus/content/repositories/orgwso2carbon-1039</url>
+            <releases>
+                <enabled>true</enabled>
+                <updatePolicy>daily</updatePolicy>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
+        </repository>
+
 	    <repository>
             <id>wso2-nexus</id>
             <name>WSO2 internal Repository</name>
