--- a/modules/migration/migration-resources/migration-config.yaml
+++ b/modules/migration/migration-resources/migration-config.yaml
@@ -1,7 +1,7 @@
 migrationEnable: "true"
 
-currentVersion: "5.3.0"
-migrateVersion: "5.4.0"
+currentVersion: "5.4.0"
+migrateVersion: "5.5.0"
 
 continueOnError: "true"
 batchUpdate: "true"
@@ -155,4 +155,10 @@ versions:
      parameters:
        location: "step1"
        schema: "identity"
+
+    -
+     name: "ApplicationCertificateMigrator"
+     order: 2
+     parameters:
+        schema: "identity"
 
